--- a/index.html
+++ b/index.html
@@ -50,106 +50,114 @@
     </header>
     <main class="main__topics">
       <ul class="main__topics-list">
-        <div class="main__topic-content-out">
-          <h2 class="main__topic-first-question">Почему сосредоточиться так сложно</h2>
-          <ul class="main__topic-list-section">
-            <div class="main__topic-section">
-              <h3 class="main__topic-title">Многозадачность</h3>
-              <p class="main__topic-content">Особенно сложно сосредоточиться, когда задач много и все они — важные. 
-                Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? 
-                А дело в том, что её просто не существует. 
-                Исследователи <a href="" class="main__link-content"> выяснили</a>, что мозгу тяжело концентрироваться даже на двух делах одновременно.
-                А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса».
-                Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.</p>
-            </div>
-            <div class="main__topic-section">
-              <h3 class="main__topic-title">Дофамин</h3>
-              <p class="main__topic-content">С гормонами стресса всё понятно, но дальше — ещё интереснее. 
-                В нашей невозможности сосредоточиться замешана и полная противоположность стрессу — дофамин. 
-                Это вещество участвует в системе вознаграждения мозга. 
-                Причём тут он? Мы часто отвлекаемся от важной задачи на что-то более «приятное» для мозгов. 
-                Например, смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы чувствуем удовольствие. 
-                Получается замкнутый круг: чем больше отвлекаешься, тем больше удовольствия получаешь.</p>
-            </div>
-          </ul>
-        </div>
-        <div class="main__topic-content-in">
-          <h2 class="main__topic-question">Что снижает концентрацию внимания?</h2>
-          <ul class="main__topic-list-section">
-            <div class="main__topic-section">
-              <h3 class="main__topic-title">Многозадачность</h3>
-              <p class="main__topic-content">Как концентрация может снижаться из-за… концентрации? 
-                Любая стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности. 
-                Например, читать новости вместо работы. Но быть собранными всё время — невозможно. 
-                Концентрация — мышца, и она может не выдержать, если не давать ей отдохнуть.</p>
-            </div>
-            <div class="main__topic-section">
-              <h3 class="main__topic-title">Еда</h3>
-              <p class="main__topic-content">«Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг энергию и помогают ему лучше работать. 
-                Но уходит эта энергия также быстро, как и приходит. 
-                А мы в результате попадаем на «углеводные качели»: как только действие «быстрых углеводов» заканчивается, мы чувствуем усталость и сонливость. 
-                И хотим ещё больше быстрых углеводов.</p>
-            </div>
-            <div class="main__topic-section">
-              <h3 class="main__topic-title">Гаджеты</h3>
-              <p class="main__topic-content">Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными утятами. 
-                В результате мозг пытается переключиться с одной задачи на другую — и просто не может. 
-                А чтобы вернуться к состоянию полной концентрации, человеку в среднем нужно 20 минут. 
-                Вот и получается, что чем больше времени мы проводим в гаджетах, тем больше времени затем нужно, чтобы вернуться к работе.</p>
-            </div>
-          </ul>
-        </div>
-        <div class="main__topic-content-out">
-          <h2 class="main__topic-question">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
-          <ul class="main__topic-list-section">
-            <div class="main__topic-section">
-              <h3 class="main__topic-title">5 простых (на самом деле не очень) советов</h3>
-              <ul class="main__topic-pretitle-list-section">
-                <div class="main__topic-pretitle-section">
-                  <h4 class="main__topic-pretitle">Представьте небо и облака</h4>
-                  <p class="main__topic-content">Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. 
-                    Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. 
-                    В такие моменты можно закрыть глаза и представить, что чистое небо — это вы, а облака — тревожные мысли. 
-                    И сколько бы их ни было — ясное небо всегда будет где-то там, за тучами, и никуда не денется. 
-                    Это упражнение поможет вернуться в настоящий момент, а не волноваться о потенциальных проблемах из будущего.</p>
-                </div>
-                <div class="main__topic-pretitle-section">
-                  <h4 class="main__topic-pretitle">Включите музыку</h4>
-                  <p class="main__topic-content">Но не любую, и не любимую. 
-                    Любимая может быть связана с сильными положительными эмоциями, которые тоже очень сильно отвлекают. 
-                    Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист с «белым шумом» или нейромузыкой.</p>
-                </div>
-                <div class="main__topic-pretitle-section">
-                  <h4 class="main__topic-pretitle">Прогуляйтесь</h4>
-                  <p class="main__topic-content">Или даже пробегитесь. Лучше найти парк или лес: один эксперимент <a href="" class="main__link-content">показал</a>, что созерцание природы повышает концентрацию, 
-                    в то время как после просмотра городских пейзажей она наоборот понижается. 
-                    Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. 
-                    Но и простая двадцатиминутная прогулка — тоже отличный вариант.</p>
-                </div>
-                <div class="main__topic-pretitle-section">
-                  <h4 class="main__topic-pretitle">Хорошо ешьте</h4>
-                  <p class="main__topic-content">Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара в крови. 
-                    Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.</p>
-                </div>
-                <div class="main__topic-pretitle-section">
-                  <h4 class="main__topic-pretitle">Читайте</h4>
-                  <p class="main__topic-content">Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. 
-                    А вот интересная книга способна затянуть и на несколько часов и круто тренирует направленное внимание.</p>
-                </div>
-              </ul>
-            </div>
-          </ul>
-        </div>
-        <div class="main__topic-content_in">
-          <h2 class="main__topic-question-accent">А можно в картинках?</h2>
-          <ul class=main__topic-image-list>
-            <img class="main__topic-image-first" src="images/sunset.png">
-            <img class="main__topic-image" src="images/ice-cream.png">
-            <img class="main__topic-image" src="images/tape.png">
-            <img class="main__topic-image" src="images/books.png">
-            <img class="main__topic-image" src="images/street.png">
-          </ul>
-        </div>
+        <li class="main__topic-section-content">
+          <div class="main__topic-content-out">
+            <h2 class="main__topic-first-question">Почему сосредоточиться так сложно</h2>
+            <ul class="main__topic-list-section">
+              <div class="main__topic-section">
+                <h3 class="main__topic-title">Многозадачность</h3>
+                <p class="main__topic-content">Особенно сложно сосредоточиться, когда задач много и все они — важные. 
+                  Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? 
+                  А дело в том, что её просто не существует. 
+                  Исследователи <a href="" class="main__link-content"> выяснили</a>, что мозгу тяжело концентрироваться даже на двух делах одновременно.
+                  А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса».
+                  Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.</p>
+              </div>
+              <div class="main__topic-section">
+                <h3 class="main__topic-title">Дофамин</h3>
+                <p class="main__topic-content">С гормонами стресса всё понятно, но дальше — ещё интереснее. 
+                  В нашей невозможности сосредоточиться замешана и полная противоположность стрессу — дофамин. 
+                  Это вещество участвует в системе вознаграждения мозга. 
+                  Причём тут он? Мы часто отвлекаемся от важной задачи на что-то более «приятное» для мозгов. 
+                  Например, смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы чувствуем удовольствие. 
+                  Получается замкнутый круг: чем больше отвлекаешься, тем больше удовольствия получаешь.</p>
+              </div>
+            </ul>
+          </div>
+        </li>
+        <li class="main__topic-section-content">
+          <div class="main__topic-content-in">
+            <h2 class="main__topic-question">Что снижает концентрацию внимания?</h2>
+            <ul class="main__topic-list-section">
+              <div class="main__topic-section">
+                <h3 class="main__topic-title">Многозадачность</h3>
+                <p class="main__topic-content">Как концентрация может снижаться из-за… концентрации? 
+                  Любая стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности. 
+                  Например, читать новости вместо работы. Но быть собранными всё время — невозможно. 
+                  Концентрация — мышца, и она может не выдержать, если не давать ей отдохнуть.</p>
+              </div>
+              <div class="main__topic-section">
+                <h3 class="main__topic-title">Еда</h3>
+                <p class="main__topic-content">«Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг энергию и помогают ему лучше работать. 
+                  Но уходит эта энергия также быстро, как и приходит. 
+                  А мы в результате попадаем на «углеводные качели»: как только действие «быстрых углеводов» заканчивается, мы чувствуем усталость и сонливость. 
+                  И хотим ещё больше быстрых углеводов.</p>
+              </div>
+              <div class="main__topic-section">
+                <h3 class="main__topic-title">Гаджеты</h3>
+                <p class="main__topic-content">Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными утятами. 
+                  В результате мозг пытается переключиться с одной задачи на другую — и просто не может. 
+                  А чтобы вернуться к состоянию полной концентрации, человеку в среднем нужно 20 минут. 
+                  Вот и получается, что чем больше времени мы проводим в гаджетах, тем больше времени затем нужно, чтобы вернуться к работе.</p>
+              </div>
+            </ul>
+          </div>
+        </li>
+        <li class="main__topic-section-content">
+          <div class="main__topic-content-out">
+            <h2 class="main__topic-question">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
+            <ul class="main__topic-list-section">
+              <div class="main__topic-section">
+                <h3 class="main__topic-title">5 простых (на самом деле не очень) советов</h3>
+                <ul class="main__topic-pretitle-list-section">
+                  <div class="main__topic-pretitle-section">
+                    <h4 class="main__topic-pretitle">Представьте небо и облака</h4>
+                    <p class="main__topic-content">Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. 
+                      Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. 
+                      В такие моменты можно закрыть глаза и представить, что чистое небо — это вы, а облака — тревожные мысли. 
+                      И сколько бы их ни было — ясное небо всегда будет где-то там, за тучами, и никуда не денется. 
+                      Это упражнение поможет вернуться в настоящий момент, а не волноваться о потенциальных проблемах из будущего.</p>
+                  </div>
+                  <div class="main__topic-pretitle-section">
+                    <h4 class="main__topic-pretitle">Включите музыку</h4>
+                    <p class="main__topic-content">Но не любую, и не любимую. 
+                      Любимая может быть связана с сильными положительными эмоциями, которые тоже очень сильно отвлекают. 
+                      Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист с «белым шумом» или нейромузыкой.</p>
+                  </div>
+                  <div class="main__topic-pretitle-section">
+                    <h4 class="main__topic-pretitle">Прогуляйтесь</h4>
+                    <p class="main__topic-content">Или даже пробегитесь. Лучше найти парк или лес: один эксперимент <a href="" class="main__link-content">показал</a>, что созерцание природы повышает концентрацию, 
+                      в то время как после просмотра городских пейзажей она наоборот понижается. 
+                      Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. 
+                      Но и простая двадцатиминутная прогулка — тоже отличный вариант.</p>
+                  </div>
+                  <div class="main__topic-pretitle-section">
+                    <h4 class="main__topic-pretitle">Хорошо ешьте</h4>
+                    <p class="main__topic-content">Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара в крови. 
+                      Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.</p>
+                  </div>
+                  <div class="main__topic-pretitle-section">
+                    <h4 class="main__topic-pretitle">Читайте</h4>
+                    <p class="main__topic-content">Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. 
+                      А вот интересная книга способна затянуть и на несколько часов и круто тренирует направленное внимание.</p>
+                  </div>
+                </ul>
+              </div>
+            </ul>
+          </div>
+        </li>
+        <li class="main__topic-section-content">
+          <div class="main__topic-content_in">
+            <h2 class="main__topic-question-accent">А можно в картинках?</h2>
+            <ul class=main__topic-image-list>
+              <img class="main__topic-image-first" src="images/sunset.png" alt="Закат">
+              <img class="main__topic-image" src="images/ice-cream.png" alt="Счастливое мороженое">
+              <img class="main__topic-image" src="images/tape.png" alt="Кассета">
+              <img class="main__topic-image" src="images/books.png" alt="Книги">
+              <img class="main__topic-image" src="images/street.png" alt="Улица">
+            </ul>
+          </div>
+        </li>
       </ul>
     </main>
     <footer class="footer__focus-screen">
